# circuit-SAT

./: .gitignore  CMakeLists.txt
circuits/: aes-input-1.txt  mult-input-1.txt  template.txt
circuits/original/: adder.txt  aes-input-2.txt  and.txt  mult-input-2.txt  not.txt  xor.txt
include-shared/: circuit.hpp  constants.hpp  logger.hpp  messages.hpp  util.hpp
include/drivers/: crypto_driver.hpp  ot_driver.hpp
include/pkg/: evaluator.hpp  garbler.hpp  prover.hpp  verifier.hpp
src-shared/: circuit.cxx  logger.cxx  messages.cxx  util.cxx
src/cmd/: evaluator.cxx  garbler.cxx  ot_test.cxx  prover.cxx  verifier.cxx
src/drivers/: crypto_driver.cxx  ot_driver.cxx
src/pkg/: evaluator.cxx  garbler.cxx  prover.cxx  verifier.cxx
test/: CMakeLists.txt
